# tuv-x-cpp

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  NUMERICAL-TESTS.md  README.md  TODO.md
.claude/: phase3-plan.md  phase4-plan.md
.claude/skills/: build-test.md  check-style.md  format.md  new-component.md  test.md  translate.md
cmake/: StaticAnalyzers.cmake  dependencies.cmake  test_util.cmake
include/tuvx/: tuvx.hpp
include/tuvx/cross_section/: cross_section.hpp  cross_section_warehouse.hpp  temperature_based.hpp
include/tuvx/grid/: grid.hpp  grid_spec.hpp  grid_warehouse.hpp  mutable_grid.hpp
include/tuvx/interpolation/: conserving_interpolator.hpp  interpolator.hpp  linear_interpolator.hpp
include/tuvx/model/: model_config.hpp  model_output.hpp  tuv_model.hpp
include/tuvx/photolysis/: photolysis_rate.hpp
include/tuvx/profile/: mutable_profile.hpp  profile.hpp  profile_spec.hpp  profile_warehouse.hpp
include/tuvx/quantum_yield/: quantum_yield.hpp  quantum_yield_warehouse.hpp
include/tuvx/radiation_field/: radiation_field.hpp
include/tuvx/radiator/: radiator.hpp  radiator_state.hpp  radiator_warehouse.hpp
include/tuvx/solar/: extraterrestrial_flux.hpp  solar_position.hpp
include/tuvx/solver/: delta_eddington.hpp  solver.hpp
include/tuvx/spherical_geometry/: spherical_geometry.hpp
include/tuvx/surface/: surface_albedo.hpp
include/tuvx/util/: array.hpp  constants.hpp  error.hpp  internal_error.hpp
scripts/: plot_solver_benchmarks.py  plot_spectral_analysis.py
src/: CMakeLists.txt  version.hpp.in
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/cross_section/: test_cross_section.cpp  test_cross_section_o3.cpp  test_cross_section_warehouse.cpp
test/unit/grid/: test_grid.cpp  test_grid_warehouse.cpp  test_mutable_grid.cpp
test/unit/interpolation/: test_conserving_interpolator.cpp  test_linear_interpolator.cpp
(+30 files in other folders)
